refactor: remove Notion integration to focus on chart generation
BREAKING CHANGE: Notion upload functionality has been removed

- Remove @notionhq/client dependency
- Remove getNotionConfig() and uploadToNotion() functions
- Simplify main() to always save charts locally
- Update README to remove all Notion setup and usage instructions
- Tool now focuses solely on generating beautiful hill charts
- All three modes (interactive, JSON, CLI) work as before
- Charts are always saved to outputs/ folder

Rationale: Keep tool focused on single responsibility (chart generation).
External integrations like Notion can be handled separately.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@prosperity/hill-chart-publisher",
   "version": "1.0.0",
-  "description": "CLI tool to generate and publish hill charts to Notion",
+  "description": "CLI tool to generate beautiful hill charts for project progress visualization",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -9,11 +9,10 @@
   },
   "keywords": [
     "hill-chart",
-    "notion",
-    "project-management"
+    "project-management",
+    "visualization"
   ],
   "dependencies": {
-    "@notionhq/client": "^2.2.15",
     "d3": "^7.9.0",
     "jsdom": "^25.0.1",
     "node-fetch": "^3.3.2",
